<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Kalendar</string>
    <string name="widget_name" translatable="false">Kalendar</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="not_initialized_yet">Not initialized yet…</string>
    <string name="no_events_to_show">No events to show</string>
    <string name="add_event_desc">Add new calendar event</string>
    <string name="refresh_desc">Refresh</string>
    <string name="open_prefs_desc">Open the settings of the calendar widget</string>
    <string name="indicator_alarm">Indicator if an alarm has been set</string>
    <string name="indicator_recurring">Indicator if the event is recurring</string>
    <string name="no_title">(No title)</string>
    <string name="grant_permissions">Grant permissions</string>
    <string name="grant_permissions_verbose">Widget requires permission to read calendars.\nTap here to grant permission.</string>
    <string name="permissions_justification">Welcome to Kalendar, the easy access to your calendar.\n\nTo make the most of the widget you need to grant it access to your calendar.</string>
    <string name="no_widgets_found">Please add a \"Kalendar\" widget from the home screen of your device first.</string>
    <string name="select_a_widget_to_configure">Select a widget to configure</string>
    <string name="go_to_home_screen">Go to home screen</string>
    <string name="app_description_80_chars_max" tools:ignore="UnusedResources">Widget that displays a list of upcoming events and tasks</string>
    <string name="app_description_4000_chars_max_part01" tools:ignore="UnusedResources">Kalendar is a home screen widget that displays a list of upcoming calendar events and taks providing a glimpse at your appointments.</string>
    <string name="app_description_4000_chars_max_part02" tools:ignore="UnusedResources">Features</string>
    <string name="app_description_4000_chars_max_part03" tools:ignore="UnusedResources">No advertising. Free and Open Source.</string>
    <string name="app_description_4000_chars_max_part04" tools:ignore="UnusedResources">Displays events from selected calendars and task lists.</string>
    <string name="app_description_4000_chars_max_part05" tools:ignore="UnusedResources">Displays birthdays from you contacts.</string>
    <string name="app_description_4000_chars_max_part06" tools:ignore="UnusedResources">Supports displaying tasks from Open Tasks (by dmfs GmbH), Tasks.org (by Alex Baker), and Samsung Calendar.</string>
    <string name="app_description_4000_chars_max_part07" tools:ignore="UnusedResources">Select how far ahead to display events (one week, one month, etc.). Optionally shows past events.</string>
    <string name="app_description_4000_chars_max_part08" tools:ignore="UnusedResources">Automatically updates when you add/delete/modify an event. Or you may update the list instantly.</string>
    <string name="app_description_4000_chars_max_part09" tools:ignore="UnusedResources">Customize colors and text size of the widget.</string>
    <string name="app_description_4000_chars_max_part10" tools:ignore="UnusedResources">Fully resizable widget with two alternative layouts and layout customizations.</string>
    <string name="app_description_4000_chars_max_part11" tools:ignore="UnusedResources">Lock time zone when travelling to different time zones.</string>
    <string name="app_description_4000_chars_max_part12" tools:ignore="UnusedResources">Backup and restore settings, cloning widgets on the same or different devices.</string>
    <string name="app_description_4000_chars_max_part13" tools:ignore="UnusedResources">Android 4.4+ supported. Supports Android tablets.</string>
    <string name="calendars_prefs">Calendars</string>
    <string name="calendars_prefs_desc">Select the calendars to display</string>
    <string name="layout_prefs_title">Layout</string>
    <string name="layout_prefs_desc">Place, show and hide widget elements</string>
    <string name="widget_instance_name">Widget name</string>
    <string name="appearance_text_size_title">Text size</string>
    <string name="appearance_text_size_desc">Adjust the text size</string>
    <string name="appearance_text_size_very_small">Very small</string>
    <string name="appearance_text_size_small">Small</string>
    <string name="appearance_text_size_medium">Medium</string>
    <string name="appearance_text_size_large">Large</string>
    <string name="appearance_text_size_very_large">Very large</string>
    <string name="pref_event_entry_layout_title">Event entry layout</string>
    <string name="default_multiline_layout">Time below title</string>
    <string name="single_line_layout">All in one row</string>
    <string name="appearance_multiline_title_title">Multiline title</string>
    <string name="appearance_multiline_title_desc">Spread event title over multiple lines</string>
    <string name="appearance_abbreviate_dates_title">Abbreviate dates</string>
    <string name="appearance_abbreviate_dates_desc">Use three-letter format for dates in Widget and Day headers etc.</string>
    <string name="appearance_show_day_headers_title">Show day headers</string>
    <string name="appearance_show_day_headers_desc">Show day headers at all</string>
    <string name="appearance_day_header_alignment_title">Day header alignment</string>
    <string name="appearance_day_header_alignment_desc">Set the alignment of the day header</string>
    <string name="appearance_day_header_alignment_left">Left</string>
    <string name="appearance_day_header_alignment_center">Center</string>
    <string name="appearance_day_header_alignment_right">Right</string>
    <string name="appearance_show_days_without_events_title">Show days without events</string>
    <string name="appearance_show_days_without_events_desc">Show day headers for days without events</string>
    <string name="appearance_display_header_title">Show widget header</string>
    <string name="appearance_display_header_desc">Show the date and settings header</string>
    <string name="appearance_header_separator_title">Show separator below header</string>
    <string name="appearance_header_separator_desc">Show a line below the widget header to separate it from the main content</string>
    <string name="lock_time_zone_title">Lock time zone</string>
    <string name="lock_time_zone_off_desc">Unlocked, current zone: %s</string>
    <string name="lock_time_zone_on_desc">Locked at %s</string>
    <string name="appearance_group_color_title">Colors</string>
    <string name="colors_prefs_desc">Colors and opacity of texts and backgrounds</string>
    <string name="appearance_event_color_title">Event color</string>
    <string name="appearance_event_color_desc">Adjust the text color of events</string>
    <string name="appearance_current_event_color_title">Current event color</string>
    <string name="appearance_current_event_color_desc">Adjust the text color of events currently happening</string>
    <string name="appearance_day_header_color_title">Day header color</string>
    <string name="appearance_day_header_color_desc">Adjust the text color of day headers</string>
    <string name="appearance_background_color_title">Background color</string>
    <string name="appearance_background_color_desc">Adjust the color of the background</string>
    <string name="appearance_past_events_background_color_title">Past events background color</string>
    <string name="appearance_past_events_background_color_desc">Adjust background color of past events</string>
    <string name="event_details_prefs">Event details</string>
    <string name="event_details_prefs_desc">Configure what details to show for an event</string>
    <string name="event_details_show_end_time_title">End time</string>
    <string name="event_details_show_end_time_desc">Show the event ending time</string>
    <string name="event_details_show_location_title">Show location</string>
    <string name="event_details_show_location_desc">Show or hide event location</string>
    <string name="event_details_fill_all_day_events_title">Fill all day events</string>
    <string name="event_details_fill_all_day_events_desc">Show an entry for each day of an all day event</string>
    <string name="event_details_indicators">Indicators</string>
    <string name="event_details_indicate_alert_title">Alerts</string>
    <string name="event_details_indicate_alert_desc">Show indicator for alerts</string>
    <string name="event_details_indicate_recurring_title">Recurring events</string>
    <string name="event_details_indicate_recurring_desc">Show indicator for recurring events</string>
    <string name="event_filters_prefs">Event filters</string>
    <string name="event_filters_prefs_desc">Which current, future and past events to show</string>
    <string name="past_events">Past events</string>
    <string name="pref_events_ended_title">Show past events</string>
    <string name="this_option_is_turned_off">(disabled)</string>
    <string name="current_and_future_events">Current and future events</string>
    <string name="event_details_event_range_title">Date range</string>
    <string name="event_range_one_month">One month</string>
    <string name="all_events">All events</string>
    <string name="pref_hide_based_on_keywords_title">Hide based on keywords in a title</string>
    <string name="show_only_closest_instance_of_recurring_event">Show only the closest instance of a recurring event</string>
    <string name="task_prefs">Tasks</string>
    <string name="task_prefs_desc">Configure display of tasks/TODOs</string>
    <string name="task_source_pref_title">Task events source</string>
    <string name="task_app_not_installed">Selected task app is not installed</string>
    <string name="grant_task_permission_title">Grant permission to fetch tasks</string>
    <string name="grant_task_permission_desc">You need to grant permission for tasks to be displayed</string>
    <string name="task_lists_pref_title">Task lists</string>
    <string name="task_lists_pref_summary">Select the task lists to display</string>
    <string name="show_birthdays_title">Show birthdays</string>
    <string name="show_birthdays_desc">Show birthdays from your contacts</string>
    <string name="birthday_color_title">Birthdays color</string>
    <string name="birthday_color_desc">Select the color used for birthday events</string>
    <string name="grant_birthday_permission_title">Grant permission to fetch contacts</string>
    <string name="grant_birthday_permission_desc">You need to grant permission to access your contacts in order for their birthdays to be displayed</string>
    <string name="feedback_backup_prefs">Feedback and Backup</string>
    <string name="feedback_backup_prefs_desc">Get in touch with us, backup and restore settings</string>
    <string name="feedback_github_title">Visit widget on Github</string>
    <string name="feedback_github_desc">Provide feedback on the project page</string>
    <string name="feedback_play_store_title">Visit widget on Google Play Store</string>
    <string name="feedback_play_store_desc">Rate and comment on Google Play Store</string>
    <string name="share_events_settings_for_debugging_title">Share events and settings for debugging</string>
    <string name="share_events_for_debugging_desc">Create a report to help developers troubleshoot problems.
        Before sharing please filter events to protect your privacy but still demonstrate a problem</string>
    <string name="backup_settings_title">Backup settings</string>
    <string name="backup_settings_desc">Export this widget\'s settings to a file</string>
    <string name="restore_settings_title">Restore settings from a backup</string>
    <string name="restore_settings_desc">Import saved settings. Settings of each widget should be imported separately</string>
</resources>