<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:key="widgetInstanceName"
        app:title="@string/widget_instance_name"
        app:iconSpaceReserved="false" />

    <ListPreference
        app:key="textSizeScale"
        app:title="@string/appearance_text_size_title"
        app:summary="@string/appearance_text_size_desc"
        app:defaultValue="1.0"
        app:entries="@array/pref_text_size_entries"
        app:entryValues="@array/pref_text_size_values"
        app:iconSpaceReserved="false" />

    <ListPreference
        app:key="eventEntryLayout"
        app:title="@string/pref_event_entry_layout_title"
        app:summary="@string/default_multiline_layout"
        app:defaultValue="DEFAULT"
        app:entries="@array/pref_event_entry_layout_entries"
        app:entryValues="@array/pref_event_entry_layout_values"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false" />

    <CheckBoxPreference
        app:key="multilineTitle"
        app:summary="@string/appearance_multiline_title_desc"
        app:title="@string/appearance_multiline_title_title"
        app:defaultValue="false"
        app:iconSpaceReserved="false" />

    <CheckBoxPreference
        app:key="abbreviateDates"
        app:title="@string/appearance_abbreviate_dates_title"
        app:summary="@string/appearance_abbreviate_dates_desc"
        app:defaultValue="false"
        app:iconSpaceReserved="false" />

    <CheckBoxPreference
        app:key="showDayHeaders"
        app:title="@string/appearance_show_day_headers_title"
        app:summary="@string/appearance_show_day_headers_desc"
        app:defaultValue="true"
        app:iconSpaceReserved="false" />

    <ListPreference
        app:key="dayHeaderAlignment"
        app:title="@string/appearance_day_header_alignment_title"
        app:summary="@string/appearance_day_header_alignment_desc"
        app:defaultValue="LEFT"
        app:dependency="showDayHeaders"
        app:entries="@array/pref_day_header_alignment_entries"
        app:entryValues="@array/pref_day_header_alignment_values"
        app:iconSpaceReserved="false" />

    <CheckBoxPreference
        app:key="showDaysWithoutEvents"
        app:title="@string/appearance_show_days_without_events_title"
        app:summary="@string/appearance_show_days_without_events_desc"
        app:defaultValue="false"
        app:dependency="showDayHeaders"
        app:iconSpaceReserved="false" />

    <CheckBoxPreference
        app:key="showHeader"
        app:title="@string/appearance_display_header_title"
        app:summary="@string/appearance_display_header_desc"
        app:defaultValue="true"
        app:iconSpaceReserved="false" />

    <CheckBoxPreference
        app:key="showHeaderSeparator"
        app:title="@string/appearance_header_separator_title"
        app:summary="@string/appearance_header_separator_desc"
        app:defaultValue="false"
        app:iconSpaceReserved="false" />

    <CheckBoxPreference
        app:key="lockTimeZone"
        app:title="@string/lock_time_zone_title"
        app:summary="@string/lock_time_zone_off_desc"
        app:defaultValue="false"
        app:persistent="false"
        app:iconSpaceReserved="false" />

</PreferenceScreen>
