<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:key="widgetInstanceName"
        app:title="@string/widget_instance_name" />

    <ListPreference
        app:key="textSizeScale"
        app:title="@string/appearance_text_size_title"
        app:summary="@string/appearance_text_size_desc"
        app:defaultValue="1.0"
        app:entries="@array/pref_text_size_entries"
        app:entryValues="@array/pref_text_size_values" />

    <ListPreference
        app:key="eventEntryLayout"
        app:title="@string/pref_event_entry_layout_title"
        app:summary="@string/default_multiline_layout"
        app:defaultValue="DEFAULT"
        app:entries="@array/pref_event_entry_layout_entries"
        app:entryValues="@array/pref_event_entry_layout_values" />

    <CheckBoxPreference
        app:key="multiline_title"
        app:summary="@string/appearance_multiline_title_desc"
        app:title="@string/appearance_multiline_title_title"
        app:defaultValue="false" />

    <ListPreference
        app:key="dateFormat"
        app:title="@string/appearance_date_format_title"
        app:summary="@string/appearance_date_format_desc"
        app:defaultValue="auto"
        app:entries="@array/pref_date_format_entries"
        app:entryValues="@array/pref_date_format_values" />

    <CheckBoxPreference
        app:key="abbreviateDates"
        app:title="@string/appearance_abbreviate_dates_title"
        app:summary="@string/appearance_abbreviate_dates_desc"
        app:defaultValue="false" />

    <CheckBoxPreference
        app:key="showDayHeaders"
        app:title="@string/appearance_show_day_headers_title"
        app:summary="@string/appearance_show_day_headers_desc"
        app:defaultValue="true" />

    <ListPreference
        app:key="dayHeaderAlignment"
        app:title="@string/appearance_day_header_alignment_title"
        app:summary="@string/appearance_day_header_alignment_desc"
        app:defaultValue="RIGHT"
        app:dependency="showDayHeaders"
        app:entries="@array/pref_day_header_alignment_entries"
        app:entryValues="@array/pref_day_header_alignment_values" />

    <CheckBoxPreference
        app:key="showDaysWithoutEvents"
        app:title="@string/appearance_show_days_without_events_title"
        app:summary="@string/appearance_show_days_without_events_desc"
        app:defaultValue="false"
        app:dependency="showDayHeaders" />

    <CheckBoxPreference
        app:key="showHeader"
        app:title="@string/appearance_display_header_title"
        app:summary="@string/appearance_display_header_desc"
        app:defaultValue="true" />

    <CheckBoxPreference
        app:key="lockTimeZone"
        app:title="@string/lock_time_zone_title"
        app:summary="@string/lock_time_zone_off_desc"
        app:defaultValue="false"
        app:persistent="false" />

    <PreferenceCategory app:title="@string/appearance_group_color_title">
        <ListPreference
            app:key="headerTheme"
            app:title="@string/appearance_header_theme_title"
            app:summary="@string/appearance_header_theme_desc"
            app:defaultValue="DARK"
            app:entries="@array/pref_theme_entries"
            app:entryValues="@array/pref_theme_values" />

        <Preference
            app:key="backgroundColor"
            app:title="@string/appearance_background_color_title"
            app:summary="@string/appearance_background_color_desc"
            app:defaultValue="2147483648" />

        <Preference
            app:key="pastEventsBackgroundColor"
            app:title="@string/appearance_past_events_background_color_title"
            app:summary="@string/appearance_past_events_background_color_desc"
            app:defaultValue="2147548928" />

        <ListPreference
            app:key="entryTheme"
            app:title="@string/appearance_entries_theme_title"
            app:summary="@string/appearance_entries_theme_desc"
            app:defaultValue="BLACK"
            app:entries="@array/pref_theme_entries"
            app:entryValues="@array/pref_theme_values" />
    </PreferenceCategory>

</PreferenceScreen>
