<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/past_events">
        <ListPreference
            app:key="eventsEnded"
            app:title="@string/pref_events_ended_title"
            app:summary="@string/this_option_is_turned_off"
            app:defaultValue="NONE"
            app:entries="@array/pref_events_ended_entries"
            app:entryValues="@array/pref_events_ended_values" />

        <org.andstatus.todoagenda.prefs.MultilineCheckBoxPreference
            app:key="showPastEventsWithDefaultColor"
            app:title="@string/show_past_events_with_default_color_title"
            app:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/current_and_future_events">
        <ListPreference
            app:key="eventRange"
            app:title="@string/event_details_event_range_title"
            app:summary="@string/event_range_one_month"
            app:defaultValue="30"
            app:entries="@array/pref_event_range_entries"
            app:entryValues="@array/pref_event_range_values" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/all_events">
        <EditTextPreference
            app:key="hideBasedOnKeywords"
            app:title="@string/pref_hide_based_on_keywords_title"
            app:summary="@string/this_option_is_turned_off" />

        <org.andstatus.todoagenda.prefs.MultilineCheckBoxPreference
            app:key="showOnlyClosestInstanceOfRecurringEvent"
            app:title="@string/show_only_closest_instance_of_recurring_event"
            app:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>
