<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        app:key="taskSource"
        app:title="@string/task_source_pref_title"
        app:defaultValue="NONE"
        app:entries="@array/pref_task_source_entries"
        app:entryValues="@array/pref_task_source_values"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false" />

    <Preference
        app:key="taskAppNotInstalled"
        app:title="@string/task_app_not_installed"
        app:persistent="false"
        app:iconSpaceReserved="false" />

    <Preference
        app:key="grantTaskPermission"
        app:title="@string/grant_task_permission_title"
        app:summary="@string/grant_task_permission_desc"
        app:persistent="false"
        app:iconSpaceReserved="false" />

    <Preference
        app:key="activeTaskListsButton"
        app:title="@string/task_lists_pref_title"
        app:summary="@string/task_lists_pref_summary"
        app:persistent="false"
        app:fragment="com.github.ekalin.kalendar.prefs.TaskListsPreferencesFragment"
        app:iconSpaceReserved="false" />
</PreferenceScreen>
